--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   ],
 
   "require": {
-    "guzzlehttp/guzzle": "^6.3"
+    "guzzlehttp/guzzle": "^6.3",
+    "latte/latte": "^2.4"
   },
 
   "require-dev": {
