--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
   ],
 
   "require": {
+    "php": "^7.0",
     "guzzlehttp/guzzle": "^6.3",
     "latte/latte": "^2.4"
   },
@@ -19,8 +20,9 @@
   "require-dev": {
     "tracy/tracy": "^2.4",
     "nette/tester": "^2.0",
-    "dg/composer-cleaner": "^1.1",
-    "squizlabs/php_codesniffer": "*"
+    "nette/di": "^2.4",
+    "squizlabs/php_codesniffer": "*",
+    "phpstan/phpstan": "^0.9.2"
   },
 
   "autoload": {
