--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
 
   "require": {
     "php": "^7.0",
-    "guzzlehttp/guzzle": "^6.3",
-    "latte/latte": "^2.4"
+    "guzzlehttp/guzzle": "^6.3"
   },
 
   "require-dev": {
