make same edites before release

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ install:
     - travis_retry composer install --no-progress --prefer-dist
 
 script:
+    - vendor/bin/tester tests/
     - vendor/bin/phpcs --standard=ruleset.xml --extensions=php,phpt src/ tests/
     - if [ "$TRAVIS_PHP_VERSION" == "7.2" ]; then vendor/bin/phpstan analyse -l 7 src; fi
 
