--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
 
   "require-dev": {
     "tracy/tracy": "^2.4",
+    "latte/latte": "^2.4",
     "nette/tester": "^2.0",
     "nette/di": "^2.4",
     "squizlabs/php_codesniffer": "*",
