first part of refactoring

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,3 +1,5 @@
 parameters:
 	autoload_directories:
 		- ./src/SmsManager/Diagnostics
+	excludes_analyse:
+		- ./src/SmsManager/Diagnostics/Panel.php
