--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
 
   "require": {
     "php": "^7.1",
-    "guzzlehttp/guzzle": "^6.3"
+    "guzzlehttp/guzzle": "^6.3",
+    "smartemailing/types": "^1.0"
   },
 
   "require-dev": {
