--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   ],
 
   "require": {
-    "php": "^7.1",
+    "php": "^7.1 || ^8.0",
     "guzzlehttp/guzzle": "^6.3",
     "smartemailing/types": "^1.0",
     "tracy/tracy": "^2.4",
