phpstan 0.12 and typo fixes

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -3,3 +3,6 @@ parameters:
 		- ./src/SmsManager/Diagnostics
 	excludes_analyse:
 		- ./src/SmsManager/Diagnostics/Panel.php
+	ignoreErrors:
+		- '#Method jakubenglicky\\SmsManager\\Diagnostics\\Response::[A-Za-z]+\(\) should return [A-Za-z\<\>]+ but return statement is missing\.#'
+		- '#Method jakubenglicky\\SmsManager\\Diagnostics\\Response::[A-Za-z]+\(\) should return static\(jakubenglicky\\SmsManager\\Diagnostics\\Response\) but return statement is missing\.#'
