--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,5 +1,2 @@
-parameters:
-	autoload_directories:
-		- ./src/SmsManager/Diagnostics
-	excludes_analyse:
-		- ./src/SmsManager/Diagnostics/Panel.php
+includes:
+	- phpstan-baseline.neon
