--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,10 @@ jobs:
         run: docker-compose run composer update --no-interaction --prefer-dist
 
       - name: Coding Standard
-        run: docker-compose run php vendor/bin/phpcs src/ tests/ --standard=vendor/pd/coding-standard/src/PeckaCodingStandard/ruleset.xml
+        run: docker-compose run php make cs
+
+      - name: Coding Standard
+        run: docker-compose run php make phpstan
 
       - name: Tests Unit
-        run: docker-compose run php vendor/bin/tester tests/
+        run: docker-compose run php make unit-tests
