--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,3 +28,23 @@ jobs:
 
       - name: CS Check
         run: vendor/bin/phpcs --standard=ruleset.xml --extensions=php,phpt src/ tests/
+
+  phpstan:
+    timeout-minutes: 2
+    runs-on: ubuntu-latest
+    name: PHPStan lv. 7
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.1'
+
+      - name: Composer Update
+        run: composer update
+
+      - name: PHPStan lv. 7
+        run: vendor/bin/phpstan.phar analyse -l 7 src
