--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,10 @@ name: CI
 on:
   pull_request:
     types: [opened, synchronize]
-
+  push:
+    branches:
+      - master
+      
 concurrency:
   group: ci-${{ github.ref }}
   cancel-in-progress: true
